# routes/api.php
@@ -21,6 +21,7 @@ use Illuminate\Http\Request;
 Route::resource('maps', 'MapAPIController');
 
 // Route::resource('penggunas', 'PenggunaAPIController');
+Route::post('/register','PenggunaAPIController@store')->name('register');
 
 Route::resource('produks', 'ProdukAPIController');
 
